-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.10
-
None
-
Windows 11, latest MSVC
-
-
c8d20da62 (dev)
I'm building Qt from sources as static lib.
Latest dev built successfully, but getting an error when building the app:
D:\opt\qt\static\include\QtCore/qnumeric.h(557): error C3861: 'qBound': identifier not found D:\opt\qt\static\include\QtCore/qnumeric.h(557): note: 'qBound': function was not declared in the template definition context and can be found only via argument-dependent lookup in the instantiation context D:\opt\qt\static\include\QtCore/qnumeric.h(557): note: the template instantiation context (the oldest one first) is D:\opt\qt\static\include\QtCore/qmargins.h(201): note: see reference to function template instantiation 'int QtPrivate::qSaturateRound<qreal,true>(FP)' being compiled with [ FP=qreal ]
Found the problematic commit after bisecting:
Commit date: 21 hours ago (4/9/2025 4:49:11 PM) Commit hash: 03d5daf9437d8b46db2e89e3a9763ea701fa681c Add jemalloc support Change-Id: I6166e64e66876dee22662d3f3ea3e42a6647cfeb
For Gerrit Dashboard: QTBUG-135866 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
638399,2 | qnumeric.h: include what you use (QMinMax for qBound) | dev | qt/qtbase | Status: MERGED | +2 | 0 |