qnumeric.h: include what you use (QMinMax for qBound)

Fixes: QTBUG-135866
Change-Id: Idfa884dad04ed83660ebadd9f23ecc46ef3b14ed
Reviewed-by: Giuseppe D'Angelo <giuseppe.dangelo@kdab.com>